# AI_Medical_Report_Interpreter

./: .gitignore  README.md  app.py  logger_config.py  main.py  pyproject.toml  requirements.txt  template_files.py  test_report_pipeline.py  test_trend_agent.py  test_validation_agent.py  test_vector_store.py
agents/: doctor_validation_agent.py  explanation_agent-LAPTOP-9KIB41H1.py  explanation_agent.py  guidance_agent.py  report_agent.py  validation_agent.py
data/: medical_history.db  medical_reports.db  val_cache.json
data/vector_store/: index.faiss  index.pkl
design/: doctor.css  theme-LAPTOP-9KIB41H1.css  theme.css
doctors/: symlink_agent.py  trend_agent.py
doctors_ocr/: doctor_llm_ocr_extractor.py  image_utils.py  ocr_doctor.py  parser_ocr.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/api/: api.js
frontend/src/components/: FileUpload.jsx  Navbar.jsx  ValidationCard.jsx
graph/: agent_graph.py  doctor_graph.py
layouts/: doctor.html  main-LAPTOP-9KIB41H1.html  main.html
llm/: llm_provider.py
logic/: doctor.js  script.js
ocr_service/: ocr_engine.py  ocr_llm_extractor.py  ocr_parser.py
processing/: doctor_report_parser.py  llm_doctor_extractor.py  llm_doctor_validator.py  llm_extractor.py  llm_validation_extractor.py  ocr_engine.py  pdf_reader.py  report_parser.py  text_loader.py
prompts/: doctor_extractor.txt
rag/: retriever.py  vector_store.py
storage/: database.py  medical_history_db.py
utils/: range_extractor.py  range_mapper.py  test_line_extractor.py
