[project]
name = "ai-medical-report-interpreter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.1",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
]
