[project]
name = "ai-medical-report-interpreter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.1",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
