[project]
name = "ai-medical-report-interpreter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.1",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "python-levenshtein>=0.27.3",
    "sentence-transformers>=5.2.3",
    "sentencepiece>=0.2.1",
    "thefuzz>=0.22.1",
    "tiktoken>=0.12.0",
    "tokenizers>=0.19.1",
    "torch>=2.10.0",
    "transformers==4.41.2",
]
